--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,14 +4,11 @@
     "type": "split",
     "children": [
       {
-        "id": "a73622f0b6901a09",
+        "id": "8d80664bb83b9ee2",
         "type": "leaf",
         "state": {
-          "type": "markdown",
-          "state": {
-            "file": "javaspring/spring-01/第一课.md",
-            "mode": "source"
-          }
+          "type": "empty",
+          "state": {}
         }
       }
     ],
@@ -68,7 +65,6 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "javaspring/spring-01/第一课.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -83,11 +79,17 @@
       }
     ],
     "direction": "horizontal",
-    "width": 300,
-    "collapsed": true
+    "width": 300
   },
-  "active": "a73622f0b6901a09",
+  "active": "8d80664bb83b9ee2",
   "lastOpenFiles": [
+    "Pasted image 20210626183355.png",
+    "mysql/2.一条更新语句是如何执行的.md",
+    "Pasted image 20210626151823.png",
+    "mysql/1.一条sql语句是如何执行的.md",
+    "mysql/未命名.md",
+    "javaspring/spring-01/第一课.md",
+    "Pasted image 20210626151745.png",
     "javaspring/spring-01/未命名.md",
     "未命名.md"
   ]
